--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "991769621";
+    var serviceWorkerVersion = "3228850716";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
+
+    let useHtml = true;
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
@@ -51,6 +53,9 @@
           serviceWorkerVersion: serviceWorkerVersion,
         },
         onEntrypointLoaded: function(engineInitializer) {
+        let config = {
+          renderer: useHtml ? "html" : "canvaskit",
+        };
           engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
           });
