--- a/index 2.html
+++ b/index 2.html
@@ -37,7 +37,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3080232460";
+    var serviceWorkerVersion = "3228850716";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
