--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Клуб фигурного катания на коньках.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -32,12 +32,12 @@
 <!--  &lt;!&ndash; Favicon &ndash;&gt;-->
 <!--  <link rel="icon" type="image/png" href="favicon.png"/>-->
 
-  <title>website</title>
+  <title>Kristalice</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1115976087";
+    const serviceWorkerVersion = "2409155000";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
